# euchre_bot

./: .gitignore  CMakeLists.txt  README.md  TODO.md
include/: Action.hpp  Card.hpp  Deck.hpp  Defns.hpp  Env.hpp  GameState.hpp  Hand.hpp  HandState.hpp  Observation.hpp  Phase.hpp  Rng.hpp  Tables.hpp
include/bots/: BotUtils.hpp  HeuristicBot.hpp  IBot.hpp  MaxBot.hpp  MinBot.hpp  RandomBot.hpp  ScriptedBot.hpp
src/: Action.cpp  Deck.cpp  euchre.cpp  main.cpp
src/bots/: HeuristicBot.cpp  IBot.cpp  MaxBot.cpp  MinBot.cpp  RandomBot.cpp
tests/: bots.hpp  test_action.cpp  test_cards.cpp  test_deck.cpp  test_env.cpp  test_game.cpp  test_hand.cpp  test_heuristic.cpp  test_minmax.cpp  test_tables.cpp
